--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
 <div id="login-div">
   <h1>Register</h1>
     <p class="text-muted mt-3" style="font-size: 0.85rem;">
-      El servicio puede tardar en empezar. Si no responde al iniciar sesion, intentá nuevamente en un minuto.
+      The service may take a while to start. If it does not respond when you log in, try again in one minute.
     </p>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-group mb-3">
